# samo

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  config.example.yaml  pyproject.toml
chatbot/: cli.py  config.py  constants.py  exceptions.py
chatbot/core/: __init__.py  interfaces.py
chatbot/models/: __init__.py  base.py  chat_instance.py  metadata_extractor.py  parent_document_retriever.py
chatbot/networking/: streaming.py
chatbot/server/: __init__.py  __main__.py
chatbot/services/: __init__.py
chatbot/utils/: __init__.py  cli_args.py  command.py  fn.py  logging_utils.py  run_server.py
chatbot/vector_db/: __init__.py
data/: Acidobázická_rovnováha.txt  Acrobates.txt  Akvaristika_(koníček).txt  Albert_Szent-Györgyi.txt  Allosaurus.txt  Americký_klusák.txt  Anaspidy.txt  Anteosaurus.txt  Antigén.txt  Aronia_prunifolia.txt  Atlas_hmyzích_škůdců_lesních_dřevin.txt  Aztekium.txt  BOB.txt  Bažant_obyčajný.txt  Beluša_veľká.txt  Bernikla_červenokrká.txt  Biomarker.txt  BirdLife_Slovensko.txt  Borek_u_Velhartic.txt  Borovica_stočená.txt  Boubínský_prales.txt  Bovinná_spongiformná_encefalopatia.txt  Bradáčik_(rod).txt  Brehuľa_hnedá.txt  Breviceratops.txt  Britská_mačka.txt  Brodská_(prírodná_pamiatka).txt  Brouci_a_motýli_ve_fotografii.txt  Bunková_teória.txt  Byvol_arni.txt  Bělyšov.txt  Bělč.txt  CACIB.txt  CAJC.txt  Canisterapia.txt  Chameleón_jemenský.txt  Chlebovník_rôznolistý.txt  Chobotohlavce.txt  Chromatín.txt  Chromisty.txt  (+254 more)
db/store_location/: 00825171-9d24-4e5d-a31c-ff8cb3021b77  012daa6d-8fe7-4061-981d-178b5ab1fa09  (+423 more)
(+12 files in other folders)
